# langchain-matrixone

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml  ci.yml
docs/: api_reference.rst  conf.py  index.rst
libs/langchain-matrixone/: README.md  pyproject.toml
libs/langchain-matrixone/langchain_matrixone/: __init__.py  vectorstores.py
libs/langchain-matrixone/tests/: test_vectorstores.py
